graphcore/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARD
    COMMENT
    DOUBLEQUOTE
    FUNCDECLARESYMBOL
    GRAPH
    LBRACKET
    NAMEDSYMBOL
    PERIOD
    QUOTE
    RBRACKET

Grammar

Rule 0     S' -> terms
Rule 1     terms -> <empty>
Rule 2     terms -> declaration_list
Rule 3     declaration_list -> declaration
Rule 4     declaration_list -> declaration_list declaration
Rule 5     variable_name -> VARIABLENAME
Rule 6     constant -> NUMBER
Rule 7     constant -> STRING
Rule 8     constant -> BOOLSYMBOL
Rule 9     assignment -> ASSIGNMENT
Rule 10    declaration -> type_symbol variable_name LPAR type_list RPAR SEMICOLON
Rule 11    declaration -> type_symbol variable_name LPAR RPAR SEMICOLON
Rule 12    declaration -> type_symbol variable_name SEMICOLON
Rule 13    declaration -> boolean_equation SEMICOLON
Rule 14    boolean_equation -> BOOLSYMBOL
Rule 15    boolean_equation -> LPAR boolean_equation RPAR
Rule 16    boolean_equation -> NEGATOR boolean_equation
Rule 17    boolean_equation -> boolean_equation CONJ boolean_equation
Rule 18    boolean_equation -> boolean_equation DISJ boolean_equation
Rule 19    boolean_equation -> boolean_equation EQUALITY boolean_equation
Rule 20    boolean_equation -> boolean_equation INEQUALITY boolean_equation
Rule 21    boolean_equation -> boolean_equation IMPLICATOR boolean_equation
Rule 22    boolean_equation -> variable EQUALITY variable
Rule 23    boolean_equation -> variable INEQUALITY variable
Rule 24    boolean_equation -> STRING EQUALITY STRING
Rule 25    boolean_equation -> STRING INEQUALITY STRING
Rule 26    boolean_equation -> NUMBER EQUALITY NUMBER
Rule 27    boolean_equation -> NUMBER INEQUALITY NUMBER
Rule 28    boolean_equation -> NUMBER LESSTHAN NUMBER
Rule 29    boolean_equation -> NUMBER LESSOREQUAL NUMBER
Rule 30    boolean_equation -> attribute EQUALITY attribute
Rule 31    boolean_equation -> attribute INEQUALITY attribute
Rule 32    boolean_equation -> attribute LESSTHAN attribute
Rule 33    boolean_equation -> attribute LESSOREQUAL attribute
Rule 34    boolean_equation -> attribute EQUALITY STRING
Rule 35    boolean_equation -> attribute INEQUALITY STRING
Rule 36    boolean_equation -> attribute EQUALITY NUMBER
Rule 37    boolean_equation -> attribute INEQUALITY NUMBER
Rule 38    boolean_equation -> attribute LESSTHAN NUMBER
Rule 39    boolean_equation -> attribute LESSOREQUAL NUMBER
Rule 40    boolean_equation -> STRING EQUALITY attribute
Rule 41    boolean_equation -> STRING INEQUALITY attribute
Rule 42    boolean_equation -> NUMBER EQUALITY attribute
Rule 43    boolean_equation -> NUMBER INEQUALITY attribute
Rule 44    boolean_equation -> NUMBER LESSTHAN attribute
Rule 45    boolean_equation -> NUMBER LESSOREQUAL attribute
Rule 46    boolean_equation -> FORALL VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
Rule 47    boolean_equation -> EXISTS VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
Rule 48    attribute -> VARIABLENAME CLPAR PROPERTYNAME CRPAR
Rule 49    variable -> VARIABLENAME
Rule 50    nodes_or_edges -> NODES
Rule 51    nodes_or_edges -> EDGES
Rule 52    type_symbol -> TYPEINT
Rule 53    type_symbol -> TYPEFLOAT
Rule 54    type_symbol -> TYPESTR
Rule 55    type_symbol -> TYPELIST
Rule 56    type_symbol -> TYPEBOOL
Rule 57    variable_symbol -> VARIABLENAME
Rule 58    type_list -> type_symbol
Rule 59    type_list -> type_list COMMA type_symbol

Terminals, with rules where they appear

ASSIGNMENT           : 9
BOOLSYMBOL           : 8 14
CARD                 : 
CLPAR                : 48
COMMA                : 59
COMMENT              : 
CONJ                 : 17
CRPAR                : 48
DISJ                 : 18
DOUBLEQUOTE          : 
EDGES                : 51
EQUALITY             : 19 22 24 26 30 34 36 40 42
EXISTS               : 47
FORALL               : 46
FUNCDECLARESYMBOL    : 
GRAPH                : 
IMPLICATOR           : 21
INEQUALITY           : 20 23 25 27 31 35 37 41 43
LBRACKET             : 
LESSOREQUAL          : 29 33 39 45
LESSTHAN             : 28 32 38 44
LPAR                 : 10 11 15
MEMBEROF             : 46 47
NAMEDSYMBOL          : 
NEGATOR              : 16
NODES                : 50
NUMBER               : 6 26 26 27 27 28 28 29 29 36 37 38 39 42 43 44 45
PERIOD               : 
PROPERTYNAME         : 48
QUOTE                : 
RBRACKET             : 
RPAR                 : 10 11 15
SEMICOLON            : 10 11 12 13
STRING               : 7 24 24 25 25 34 35 40 41
TYPEBOOL             : 56
TYPEFLOAT            : 53
TYPEINT              : 52
TYPELIST             : 55
TYPESTR              : 54
VARIABLENAME         : 5 46 47 48 49 57
error                : 

Nonterminals, with rules where they appear

assignment           : 
attribute            : 30 30 31 31 32 32 33 33 34 35 36 37 38 39 40 41 42 43 44 45
boolean_equation     : 13 15 16 17 17 18 18 19 19 20 20 21 21 46 47
constant             : 
declaration          : 3 4
declaration_list     : 2 4
nodes_or_edges       : 46 47
terms                : 0
type_list            : 10 59
type_symbol          : 10 11 12 58 59
variable             : 22 22 23 23
variable_name        : 10 11 12
variable_symbol      : 

Parsing method: LALR

state 0

    (0) S' -> . terms
    (1) terms -> .
    (2) terms -> . declaration_list
    (3) declaration_list -> . declaration
    (4) declaration_list -> . declaration_list declaration
    (10) declaration -> . type_symbol variable_name LPAR type_list RPAR SEMICOLON
    (11) declaration -> . type_symbol variable_name LPAR RPAR SEMICOLON
    (12) declaration -> . type_symbol variable_name SEMICOLON
    (13) declaration -> . boolean_equation SEMICOLON
    (52) type_symbol -> . TYPEINT
    (53) type_symbol -> . TYPEFLOAT
    (54) type_symbol -> . TYPESTR
    (55) type_symbol -> . TYPELIST
    (56) type_symbol -> . TYPEBOOL
    (14) boolean_equation -> . BOOLSYMBOL
    (15) boolean_equation -> . LPAR boolean_equation RPAR
    (16) boolean_equation -> . NEGATOR boolean_equation
    (17) boolean_equation -> . boolean_equation CONJ boolean_equation
    (18) boolean_equation -> . boolean_equation DISJ boolean_equation
    (19) boolean_equation -> . boolean_equation EQUALITY boolean_equation
    (20) boolean_equation -> . boolean_equation INEQUALITY boolean_equation
    (21) boolean_equation -> . boolean_equation IMPLICATOR boolean_equation
    (22) boolean_equation -> . variable EQUALITY variable
    (23) boolean_equation -> . variable INEQUALITY variable
    (24) boolean_equation -> . STRING EQUALITY STRING
    (25) boolean_equation -> . STRING INEQUALITY STRING
    (26) boolean_equation -> . NUMBER EQUALITY NUMBER
    (27) boolean_equation -> . NUMBER INEQUALITY NUMBER
    (28) boolean_equation -> . NUMBER LESSTHAN NUMBER
    (29) boolean_equation -> . NUMBER LESSOREQUAL NUMBER
    (30) boolean_equation -> . attribute EQUALITY attribute
    (31) boolean_equation -> . attribute INEQUALITY attribute
    (32) boolean_equation -> . attribute LESSTHAN attribute
    (33) boolean_equation -> . attribute LESSOREQUAL attribute
    (34) boolean_equation -> . attribute EQUALITY STRING
    (35) boolean_equation -> . attribute INEQUALITY STRING
    (36) boolean_equation -> . attribute EQUALITY NUMBER
    (37) boolean_equation -> . attribute INEQUALITY NUMBER
    (38) boolean_equation -> . attribute LESSTHAN NUMBER
    (39) boolean_equation -> . attribute LESSOREQUAL NUMBER
    (40) boolean_equation -> . STRING EQUALITY attribute
    (41) boolean_equation -> . STRING INEQUALITY attribute
    (42) boolean_equation -> . NUMBER EQUALITY attribute
    (43) boolean_equation -> . NUMBER INEQUALITY attribute
    (44) boolean_equation -> . NUMBER LESSTHAN attribute
    (45) boolean_equation -> . NUMBER LESSOREQUAL attribute
    (46) boolean_equation -> . FORALL VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (47) boolean_equation -> . EXISTS VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (49) variable -> . VARIABLENAME
    (48) attribute -> . VARIABLENAME CLPAR PROPERTYNAME CRPAR

    $end            reduce using rule 1 (terms -> .)
    TYPEINT         shift and go to state 7
    TYPEFLOAT       shift and go to state 8
    TYPESTR         shift and go to state 9
    TYPELIST        shift and go to state 10
    TYPEBOOL        shift and go to state 11
    BOOLSYMBOL      shift and go to state 12
    LPAR            shift and go to state 5
    NEGATOR         shift and go to state 13
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    FORALL          shift and go to state 18
    EXISTS          shift and go to state 20
    VARIABLENAME    shift and go to state 19

    terms                          shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    type_symbol                    shift and go to state 4
    boolean_equation               shift and go to state 6
    variable                       shift and go to state 14
    attribute                      shift and go to state 17

state 1

    (0) S' -> terms .



state 2

    (2) terms -> declaration_list .
    (4) declaration_list -> declaration_list . declaration
    (10) declaration -> . type_symbol variable_name LPAR type_list RPAR SEMICOLON
    (11) declaration -> . type_symbol variable_name LPAR RPAR SEMICOLON
    (12) declaration -> . type_symbol variable_name SEMICOLON
    (13) declaration -> . boolean_equation SEMICOLON
    (52) type_symbol -> . TYPEINT
    (53) type_symbol -> . TYPEFLOAT
    (54) type_symbol -> . TYPESTR
    (55) type_symbol -> . TYPELIST
    (56) type_symbol -> . TYPEBOOL
    (14) boolean_equation -> . BOOLSYMBOL
    (15) boolean_equation -> . LPAR boolean_equation RPAR
    (16) boolean_equation -> . NEGATOR boolean_equation
    (17) boolean_equation -> . boolean_equation CONJ boolean_equation
    (18) boolean_equation -> . boolean_equation DISJ boolean_equation
    (19) boolean_equation -> . boolean_equation EQUALITY boolean_equation
    (20) boolean_equation -> . boolean_equation INEQUALITY boolean_equation
    (21) boolean_equation -> . boolean_equation IMPLICATOR boolean_equation
    (22) boolean_equation -> . variable EQUALITY variable
    (23) boolean_equation -> . variable INEQUALITY variable
    (24) boolean_equation -> . STRING EQUALITY STRING
    (25) boolean_equation -> . STRING INEQUALITY STRING
    (26) boolean_equation -> . NUMBER EQUALITY NUMBER
    (27) boolean_equation -> . NUMBER INEQUALITY NUMBER
    (28) boolean_equation -> . NUMBER LESSTHAN NUMBER
    (29) boolean_equation -> . NUMBER LESSOREQUAL NUMBER
    (30) boolean_equation -> . attribute EQUALITY attribute
    (31) boolean_equation -> . attribute INEQUALITY attribute
    (32) boolean_equation -> . attribute LESSTHAN attribute
    (33) boolean_equation -> . attribute LESSOREQUAL attribute
    (34) boolean_equation -> . attribute EQUALITY STRING
    (35) boolean_equation -> . attribute INEQUALITY STRING
    (36) boolean_equation -> . attribute EQUALITY NUMBER
    (37) boolean_equation -> . attribute INEQUALITY NUMBER
    (38) boolean_equation -> . attribute LESSTHAN NUMBER
    (39) boolean_equation -> . attribute LESSOREQUAL NUMBER
    (40) boolean_equation -> . STRING EQUALITY attribute
    (41) boolean_equation -> . STRING INEQUALITY attribute
    (42) boolean_equation -> . NUMBER EQUALITY attribute
    (43) boolean_equation -> . NUMBER INEQUALITY attribute
    (44) boolean_equation -> . NUMBER LESSTHAN attribute
    (45) boolean_equation -> . NUMBER LESSOREQUAL attribute
    (46) boolean_equation -> . FORALL VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (47) boolean_equation -> . EXISTS VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (49) variable -> . VARIABLENAME
    (48) attribute -> . VARIABLENAME CLPAR PROPERTYNAME CRPAR

    $end            reduce using rule 2 (terms -> declaration_list .)
    TYPEINT         shift and go to state 7
    TYPEFLOAT       shift and go to state 8
    TYPESTR         shift and go to state 9
    TYPELIST        shift and go to state 10
    TYPEBOOL        shift and go to state 11
    BOOLSYMBOL      shift and go to state 12
    LPAR            shift and go to state 5
    NEGATOR         shift and go to state 13
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    FORALL          shift and go to state 18
    EXISTS          shift and go to state 20
    VARIABLENAME    shift and go to state 19

    declaration                    shift and go to state 21
    type_symbol                    shift and go to state 4
    boolean_equation               shift and go to state 6
    variable                       shift and go to state 14
    attribute                      shift and go to state 17

state 3

    (3) declaration_list -> declaration .

    TYPEINT         reduce using rule 3 (declaration_list -> declaration .)
    TYPEFLOAT       reduce using rule 3 (declaration_list -> declaration .)
    TYPESTR         reduce using rule 3 (declaration_list -> declaration .)
    TYPELIST        reduce using rule 3 (declaration_list -> declaration .)
    TYPEBOOL        reduce using rule 3 (declaration_list -> declaration .)
    BOOLSYMBOL      reduce using rule 3 (declaration_list -> declaration .)
    LPAR            reduce using rule 3 (declaration_list -> declaration .)
    NEGATOR         reduce using rule 3 (declaration_list -> declaration .)
    STRING          reduce using rule 3 (declaration_list -> declaration .)
    NUMBER          reduce using rule 3 (declaration_list -> declaration .)
    FORALL          reduce using rule 3 (declaration_list -> declaration .)
    EXISTS          reduce using rule 3 (declaration_list -> declaration .)
    VARIABLENAME    reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (10) declaration -> type_symbol . variable_name LPAR type_list RPAR SEMICOLON
    (11) declaration -> type_symbol . variable_name LPAR RPAR SEMICOLON
    (12) declaration -> type_symbol . variable_name SEMICOLON
    (5) variable_name -> . VARIABLENAME

    VARIABLENAME    shift and go to state 23

    variable_name                  shift and go to state 22

state 5

    (15) boolean_equation -> LPAR . boolean_equation RPAR
    (14) boolean_equation -> . BOOLSYMBOL
    (15) boolean_equation -> . LPAR boolean_equation RPAR
    (16) boolean_equation -> . NEGATOR boolean_equation
    (17) boolean_equation -> . boolean_equation CONJ boolean_equation
    (18) boolean_equation -> . boolean_equation DISJ boolean_equation
    (19) boolean_equation -> . boolean_equation EQUALITY boolean_equation
    (20) boolean_equation -> . boolean_equation INEQUALITY boolean_equation
    (21) boolean_equation -> . boolean_equation IMPLICATOR boolean_equation
    (22) boolean_equation -> . variable EQUALITY variable
    (23) boolean_equation -> . variable INEQUALITY variable
    (24) boolean_equation -> . STRING EQUALITY STRING
    (25) boolean_equation -> . STRING INEQUALITY STRING
    (26) boolean_equation -> . NUMBER EQUALITY NUMBER
    (27) boolean_equation -> . NUMBER INEQUALITY NUMBER
    (28) boolean_equation -> . NUMBER LESSTHAN NUMBER
    (29) boolean_equation -> . NUMBER LESSOREQUAL NUMBER
    (30) boolean_equation -> . attribute EQUALITY attribute
    (31) boolean_equation -> . attribute INEQUALITY attribute
    (32) boolean_equation -> . attribute LESSTHAN attribute
    (33) boolean_equation -> . attribute LESSOREQUAL attribute
    (34) boolean_equation -> . attribute EQUALITY STRING
    (35) boolean_equation -> . attribute INEQUALITY STRING
    (36) boolean_equation -> . attribute EQUALITY NUMBER
    (37) boolean_equation -> . attribute INEQUALITY NUMBER
    (38) boolean_equation -> . attribute LESSTHAN NUMBER
    (39) boolean_equation -> . attribute LESSOREQUAL NUMBER
    (40) boolean_equation -> . STRING EQUALITY attribute
    (41) boolean_equation -> . STRING INEQUALITY attribute
    (42) boolean_equation -> . NUMBER EQUALITY attribute
    (43) boolean_equation -> . NUMBER INEQUALITY attribute
    (44) boolean_equation -> . NUMBER LESSTHAN attribute
    (45) boolean_equation -> . NUMBER LESSOREQUAL attribute
    (46) boolean_equation -> . FORALL VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (47) boolean_equation -> . EXISTS VARIABLENAME MEMBEROF nodes_or_edges boolean_equation
    (49) variable -> . VARIABLENAME
    (48) attribute -> . VARIABLENAME CLPAR PROPERTYNAME CRPAR

    BOOLSYMBOL      shift and go to state 12
    LPAR            shift and go to state 5
    NEGATOR         shift and go to state 13
    STRING          shift and go to state 15
    NUMBER          shift and go to state 16
    FORALL          shift and go to state 18
    EXISTS          shift and go to state 20
    VARIABLENAME    shift and go to state 19

    boolean_equation               shift and go to state 24
    variable                       shift and go to state 14
    attribute                      shift and go to state 17

state 6

    (13) declaration -> boolean_equation . SEMICOLON
    (17) boolean_equation -> boolean_equation . CONJ boolean_equation
    (18) boolean_equation -> boolean_equation . DISJ boolean_equation
    (19) boolean_equation -> boolean_equation . EQUALITY boolean_equation
    (20) boolean_equation -> boolean_equation . INEQUALITY boolean_equation
    (21) boolean_equation -> boolean_equation . IMPLICATOR boolean_equation

    SEMICOLON       shift and go to state 25
    CONJ            shift and go to state 26
    DISJ            shift and go to state 27
    EQUALITY        shift and go to state 28
    INEQUALITY      shift and go to state 29
    IMPLICATOR      shift and go to state 30


state 7

    (52) type_symbol -> TYPEINT .

    VARIABLENAME    reduce using rule 52 (type_symbol -> TYPEINT .)
    RPAR            reduce using rule 52 (type_symbol -> TYPEINT .)
    COMMA           reduce using rule 52 (type_symbol -> TYPEINT .)


state 8

    (53) type_symbol -> TYPEFLOAT .

    VARIABLENAME    reduce using rule 53 (type_symbol -> TYPEFLOAT .)
    RPAR            reduce using rule 53 (type_symbol -> TYPEFLOAT .)
    COMMA           reduce using rule 53 (type_symbol -> TYPEFLOAT .)


state 9

    (54) type_symbol -> TYPESTR .

    VARIABLENAME    reduce using rule 54 (type_symbol -> TYPESTR .)
    RPAR            reduce using rule 54 (type_symbol -> TYPESTR .)
    COMMA           reduce using rule 54 (type_symbol -> TYPESTR .)


state 10

    (55) type_symbol -> TYPELIST .

    VARIABLENAME    reduce using rule 55 (type_symbol -> TYPELIST .)
    RPAR            reduce using rule 55 (type_symbol -> TYPELIST .)
    COMMA           reduce using rule 55 (type_symbol -> TYPELIST .)


state 11

    (56) type_symbol -> TYPEBOOL .

    VARIABLENAME    reduce using rule 56 (type_symbol -> TYPEBOOL .)
    RPAR            reduce using rule 56 (type_symbol -> TYPEBOOL .)
    COMMA           reduce using rule 56 (type_symbol -> TYPEBOOL .)


state 12

    (14) boolean_equation -> BOOLSYMBOL .

    SEMICOLON       reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    CONJ            reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    DISJ            reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    EQUALITY        reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    INEQUALITY      reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    IMPLICATOR      reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)
    RPAR            reduce using rule 14 (boolean_equation -> BOOLSYMBOL .)


state 13
